# CheckTools

./: .gitignore  .gitmodules  CMakeLists.txt  NaturalDocs.exe.lnk  README.md  ui.py
include/: utils.hpp
meshChecker/: CMakeLists.txt  README.md
meshChecker/src/: meshChecker.cpp  meshChecker.h  meshChecker.hpp  pluginMain.cpp
py/modelSanityChecker/: checker.py  error.py  framelayout.py  icon.py  modelSanityChecker.py
uvChecker/: CMakeLists.txt  README.md
uvChecker/python/: removeUnassginedUVs.py
uvChecker/src/: aabb.cpp  aabb.h  event.cpp  event.h  event.hpp  findUvOverlaps.cpp  findUvOverlaps.h  findUvOverlaps.hpp  findUvOverlaps_old.cpp  findUvOverlaps_old.h  findUvOverlaps_old.hpp  pluginMain.cpp  testCase.cpp  uvChecker.cpp  uvChecker.h  uvChecker.hpp  uvEdge.cpp  uvEdge.h  uvEdge.hpp  uvPoint.cpp  uvPoint.h  uvPoint.hpp  uvShell.cpp  uvShell.h  uvShell.hpp  uvUtils.cpp  uvUtils.h  uvUtils.hpp
uvChecker/src/BentleyOttman/: .gitignore  LICENSE  README.md  bentleyOttman.cpp  bentleyOttman.hpp  bentleyOttmann.cpp  event.cpp  event.hpp  lineSegment.cpp  lineSegment.hpp  point2D.cpp  vector2D.cpp  vector2D.hpp
uvChecker/src/BentleyOttman/src/: bentleyOttman.cpp  bentleyOttman.hpp  event.cpp  event.hpp  lineSegment.cpp  lineSegment.hpp  main.cpp  point2D.hpp  utils.cpp  utils.hpp  vector2D.cpp  vector2D.hpp
uvChecker/src/BentleyOttman/src/testData/: dataSet.cpp  dataSet.hpp
uvChecker/src/BentleyOttman/testData/: DataA-Table_1.csv  DataB-Table_1.csv
uvChecker/src/bentleyOttman/: point2D.cpp  point2D.h  uvEdge.cpp  uvEdge.h  uvPoint.cpp  uvPoint.h
uvOverlapChecker/: CMakeLists.txt  README.md
uvOverlapChecker/src/: findUvOverlaps.cpp  findUvOverlaps.h  findUvOverlaps.hpp
uvOverlapChecker/src/bentleyOttmann/: bentleyOttmann.cpp  bentleyOttmann.hpp  event.cpp  event.hpp  lineSegment.cpp  lineSegment.hpp  main.cpp  point2D.cpp  point2D.hpp  vector2D.cpp  vector2D.hpp
uvOverlapChecker/src/bentleyOttmann/testData/: DataA-Table_1.csv  DataB-Table_1.csv  dataSet.cpp  dataSet.hpp
